# eth-analysis-rs

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  block.json  docker-compose.yaml  docker-compose.yml  sqlx-data.json
.cursor/: environment.json
.sqlx/: query-01cb466081a122256bbfe26bdc05799c66dcda252a5cd116287fb399c369ef81.json  query-02c53411d8986e5117c804ffee2a9ba7b6b3066ee8f7a501f774b7f5330a1f61.json  query-03b2b8ea5b46eaf8fe99711faced9a6b3d8efad4b580430a25413e0861beee27.json  query-03fa8b3371f451e867b644dbc7416031c6080001e771e92d0540602f974c5388.json  query-056938267b38be9a731caec045882abc1b4033cf66c0d80e98f21878cc147d2c.json  query-05f76b83575171bc7275f2f3ff3100a9d6150192e67a29a3f1fa80cdead19f47.json  query-07d23449367a3118f580b57fddf5c851cbc319a9c7ceb7bc1780adf476eaa238.json  query-0945ad26c9e9f6f0a9701f752e2c2e6ea257ea864a26bd86fae3a332f92ea594.json  query-0a1a5abbfd67ef23f82498d5c0c7e2ba36299a3544cb820d2f892d56ef82d72d.json  query-0a2508d2c3fbce38482cdb84e0e3bd6983a0a50d3e2036b9e8237a89d4ecdd14.json  query-0c32c06017ce791e3d195e4b3ef5e00ccae7a682e2efec6024e10b017dd3a97f.json  query-100d831ec3a9d8ea9545ca0bcaae004558fc96771fe31a755ae04625d38b0000.json  query-1180d4f36610e748febc4d31bcb4e2d472d323dd49a7439663c1c0a196d1a127.json  query-1383545cda893c179f09a9a4c2f7522391a409621885e1f773d73a36777bd21a.json  query-14fe911032ff0992a50fde6b869cd3fd54e19f6e28cbcc21182a9bfa0869c52a.json  query-1554029cec50fa60d34e134b5052a2ced227b3085b8636d4f5f8ef38855a3fd3.json  query-15a2d1956ebc241cac32f37cda7af7fe637e207522ea7752a699f6332c679d1a.json  query-16d2308944066f51fc9494819805955567c6b8f780fc6328ee5033fc744510e4.json  query-1ad95842190174bd545ee9547251a7ec50a65abb6a89baab002224938a482896.json  query-1b0b8bba7f8e9980b737ec1358fa83b27a96f77824d4617a2b60a0878eac7753.json  query-1c501a5e04ae465ccc2957f0b4eab31f875e907ac9ab2b5df999e5398b188b97.json  query-1d1cbed2bd2dfa388a1b9851e9c772e23c8256c278762aadda6413f26a06341e.json  query-1ddeec7d779b18a62c8251f3c60197524099f3b7dce37052f6f36c10bc81584b.json  query-1e4d9e2c2500b7eca882ec2b08fd33648c5dbfda45c73792e0d3d2ede1b89857.json  query-1f30489a7d32047b3d46923f0e9ec3684b8e5079c1912eae85c7fefbd79d638b.json  query-1fa92738082529c0bac77c40e91b937054b3f20bd17d5daa721943b5c4d08b5e.json  query-224362632b86d95f0e331e0391d148632baacc826c2ba532d7b55fc51c562fa2.json  query-2345c8d8037c9244b3ef6af000c37cfc47691d343becb49046c39bb0481d28e9.json  query-23f758ebfc01257996f572cc32c7074c12b3ba137403bb3458bee65edc4baa9f.json  query-247d595ede37245175efbf6979b96d63a09a618c5fd194ef7c86d5fdf8edfc74.json  query-26022725182b69f2b8a9695711836592df07efb3a1561c046294646ab178b5e7.json  query-28409ca2bee68e0969632f7278e521cae6fb20ec9247d24680b29ac9b727aaa2.json  query-290d9e93fbfdf99bba0541e4bfcef8b938a0b9a7717c4a08185717b716e47f88.json  query-2953654cbf712f2a858ed77d3cb5c4b8110fa09720510ee46758971a36b4a980.json  query-2a87275e495b48d658248157a4e846a05c5da3d17e8e46ccdf465f5baba85a59.json  query-2db8ac10ca49c54dd81892ac71832e29133bb73da37b9934903db5298962fbfc.json  query-2f09abb216302c7104189e963ee218ac6fa64fe9c07a13633830397efb726258.json  query-31185ac31b749332808469a232a9c7e5a12964142a1328f0a7d26d9fb2ad0bb1.json  query-312853b126fd6d355cdf823aad2d27ff73cb5ec0662e6330f2e15b4abff76372.json  query-31b27d08f2037f8349a8fbe10c2a4566ac5175f770d84f0b48a9b9a166923e3a.json  (+159 more)
migrations/: 20220525121040_eth_in_defi.down.sql  20220525121040_eth_in_defi.up.sql  20220527130846_beacon_states.down.sql  20220527130846_beacon_states.up.sql  20220531195747_key-value-store.up.sql  20220531195747_key_value_store.up.sql  20220601125317_use_jsonb.down.sql  20220601125317_use_jsonb.sql  20220601165620_add_blocks.down.sql  20220601165620_add_blocks.up.sql  20220617132246_add_execution_supply_deltas.down.sql  20220617132246_add_execution_supply_deltas.sql  20220617132246_add_execution_supply_deltas.up.sql  20220630220006_drop_parent_fk.sql  20220630220006_drop_parent_fk.up.sql  20220706152809_add_supply_delta_parent_hash.sql  20220707080504_execution_supply.sql  20220712113258_rename_execution_balances.sql  (+47 more)
src/: beacon_chain.rs  (+42 more)
(+201 files in other folders)
