[package]
name = "eth-analysis"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultrasoundmoney/eth-analysis-rs"
publish = false

[dependencies]
axum = "0.6"
anyhow = "1"
async-trait = "0.1"
async-tungstenite = { version = "0.19", features = ["tokio-runtime"] }
bytes = "1"
cached = "0.42"
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
csv = "1"
dialoguer = "0.10"
etag = "4"
eventsource = "0.5"
format-url = "0.6"
futures = "0.3"
lazy_static = "1"
num-bigint = "0.4"
pin-project = "1"
pit-wall = "0"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.11"
sqlx = { version = "0.6", features = [
  "chrono",
  "json",
  "offline",
  "postgres",
  "runtime-tokio-native-tls",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = [
  "compression-br",
  "compression-deflate",
  "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "std",
] }

[profile.dev.package.sqlx-macros]
opt-level = 3
