[package]
name = "eth-analysis"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultrasoundmoney/eth-analysis-rs"
publish = false
default-run = "serve"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = "0.6.20"
async-trait = "0.1.73"
async-tungstenite = { version = "0.23.0", features = ["tokio-native-tls"] }
bytes = "1.5.0"
cached = "0"
chrono = { version = "0.4.31", default-features = false, features = [
  "serde",
  "clock",
  "std",
] }
console = "0.15.7"
csv = "1.3.0"
dialoguer = "0.10.4"
enum-iterator = "1.4.1"
etag = "4.0.0"
eventsource = "0.5.0"
format-url = "0.6.2"
futures = "0.3.28"
lazy_static = "1.4.0"
nanoid = "0.4.0"
pin-project = "1.1.3"
pit-wall = "0.4.3"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_qs = "0.12.0"
sqlx = { version = "0.8.5", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio-native-tls",
] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
  "compression-br",
  "compression-deflate",
  "compression-gzip",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "fmt",
  "json",
  "std",
] }
tokio-native-tls = "0.3.0"
backoff = { version = "0.4.0", features = ["tokio"] }
mockall = "0.11.4"
tempfile = "3.8.1"
clap = { version = "4.5.38", features = ["derive"] }

[dev-dependencies]
mockito = "1.2.0"
test-context = "0.1.6"

[profile.dev.package.sqlx-macros]
opt-level = 3
